crates/ruff_linter/src/rules/flake8_comprehensions/snapshots/ruff_linter__rules__flake8_comprehensions__tests__C411_C411.py.snap
---
source: crates/ruff_linter/src/rules/flake8_comprehensions/mod.rs
---
C411 [*] Unnecessary `list()` call (remove the outer call to `list()`)
 --> C411.py:2:1
  |
1 | x = [1, 2, 3]
2 | list([i for i in x])
  | ^^^^^^^^^^^^^^^^^^^^
3 |
4 | # Skip when too many positional arguments
help: Remove outer `list()` call
  |
1 | x = [1, 2, 3]
  - list([i for i in x])
2 + [i for i in x]
3 |
  |
note: This is an unsafe fix and may change runtime behavior
