crates/ruff_linter/src/rules/flake8_comprehensions/snapshots/ruff_linter__rules__flake8_comprehensions__tests__C411_C411_py315.py.snap
---
source: crates/ruff_linter/src/rules/flake8_comprehensions/mod.rs
---
C411 Unnecessary `list()` call (remove the outer call to `list()`)
 --> C411_py315.py:3:1
1 | xs = [[1], [2]]
2 |
3 | list([*x for x in xs])
  | ^^^^^^^^^^^^^^^^^^^^^^
help: Remove outer `list()` call
